Added new feature manually from mrik974:feature/add-slack-webhook-configuration (closed pullreq)

--- a/src/main/resources/i18n/stash2slack.properties
+++ b/src/main/resources/i18n/stash2slack.properties
@@ -61,3 +61,10 @@ stash2slack.local.settings.slack.channel.description=Slack channel to use. Accep
 stash2slack.local.settings.slack.webhookurl=Webhook Url
 stash2slack.local.settings.slack.webhookurl.description=Slack webhook url. Overrides global setting, if nonempty. Useful when you want to post to a different team using a different hook
 stash2slack.local.settings.submit=Save
+stash2slack.global.settings.slack.usernam.description=Slack bot username to use
+stash2slack.global.settings.slack.usernam=User name
+stash2slack.global.settings.slack.iconurl.description=The icon URL to use
+stash2slack.global.settings.slack.iconurl=Icon URL
+stash2slack.global.settings.slack.iconemoji.description=The icon emoji to use
+stash2slack.global.settings.slack.iconemoji=Icon emoji
+
