added explanation text for feature #24

--- a/src/main/resources/i18n/stash2slack.properties
+++ b/src/main/resources/i18n/stash2slack.properties
@@ -24,7 +24,7 @@ stash2slack.global.settings.slack.notification.level.label=Notification level
 stash2slack.global.settings.slack.personal.enabled.label=Enable slack notifications for personal
 stash2slack.global.settings.slack.personal.enabled.description=If enabled, users will receive slack notifications for personal repos (forks) for both push and pullreqs
 stash2slack.global.settings.slack.channel=Channel name
-stash2slack.global.settings.slack.channel.description=Slack channel to use. Accepts a single channel name (example: #ch1), a comma separated list of channels (example: #ch1, #ch2, #ch3), or you can leave it empty. When empty, the default channel will be used within the webhook.
+stash2slack.global.settings.slack.channel.description=Slack channel to use. Accepts a single channel name (example: #ch1), or You can add a comma separated list of pairs (pattern, channel). In this case the format must be: PATTERN->CHANNELNAME,ANOTHERPATTERN->ANOTHERCHANNELNAME. Pattern will match against the current ref name ignoring the "refs/heads" part. Example: if you want to match refs/heads/bugfix/mybug42 and all other bugfix branches, add a pattern as bugfix/.* You can also leave it empty. When empty, the default channel will be used within the webhook.
 stash2slack.global.settings.slack.webhookurl=Webhook url
 stash2slack.global.settings.slack.webhook.description=Slack webhook url to use. This can be overriden for each repository at the repo slack settings page, if desired
 stash2slack.global.settings.slack.submit=Save
@@ -57,7 +57,7 @@ stash2slack.local.settings.notification.level.label=Push notification level
 stash2slack.local.settings.slack.personal.enabled.label=Enable slack notifications for personal
 stash2slack.local.settings.slack.personal.enabled.description=If enabled, users will receive slack notifications for personal repos (forks) for both push and pullreqs
 stash2slack.local.settings.slack.channel=Channel name
-stash2slack.local.settings.slack.channel.description=Slack channel to use. Accepts a single channel name (example: #ch1), a comma separated list of channels (example: #ch1, #ch2, #ch3), or you can leave it empty. When empty, the default channel will be used within the webhook.
+stash2slack.local.settings.slack.channel.description=Slack channel to use. Accepts a single channel name (example: #ch1), or You can add a comma separated list of pairs (pattern, channel). In this case the format must be: PATTERN->CHANNELNAME,ANOTHERPATTERN->ANOTHERCHANNELNAME. Pattern will match against the current ref name ignoring the "refs/heads" part. Example: if you want to match refs/heads/bugfix/mybug42 and all other bugfix branches, add a pattern as bugfix/.* You can also leave it empty. When empty, the default channel will be used within the webhook.
 stash2slack.local.settings.slack.webhookurl=Webhook Url
 stash2slack.local.settings.slack.webhookurl.description=Slack webhook url. Overrides global setting, if nonempty. Useful when you want to post to a different team using a different hook
 stash2slack.local.settings.submit=Save
