fixed pluginsettings issues when null or empty is sent

--- a/src/main/resources/i18n/stash2slack.properties
+++ b/src/main/resources/i18n/stash2slack.properties
@@ -65,12 +65,12 @@ stash2slack.global.settings.slack.username.description=Slack bot username to use
 stash2slack.global.settings.slack.username=User name
 stash2slack.global.settings.slack.iconurl.description=The icon URL to use
 stash2slack.global.settings.slack.iconurl=Icon URL
-stash2slack.global.settings.slack.iconemoji.description=The icon emoji to use
+stash2slack.global.settings.slack.iconemoji.description=The icon emoji to use (currently only for push events)
 stash2slack.global.settings.slack.iconemoji=Icon emoji
-stash2slack.local.settings.slack.username.description=Slack bot username to use
+stash2slack.local.settings.slack.username.description=Slack bot username to use (currently unused)
 stash2slack.local.settings.slack.username=User name
-stash2slack.local.settings.slack.iconurl.description=The icon URL to use
+stash2slack.local.settings.slack.iconurl.description=The icon URL to use (currently unused)
 stash2slack.local.settings.slack.iconurl=Icon URL
-stash2slack.local.settings.slack.iconemoji.description=The icon emoji to use
+stash2slack.local.settings.slack.iconemoji.description=The icon emoji to use (currently only for push events)
 stash2slack.local.settings.slack.iconemoji=Icon emoji
 
