Support the new "Needs Work" status. Fix #50. Update the bitbucket version to 4.9.1. Bump project version to 2.1.7.

--- a/src/main/resources/i18n/stash2slack.properties
+++ b/src/main/resources/i18n/stash2slack.properties
@@ -18,6 +18,8 @@ stash2slack.global.settings.slack.merged.enabled.label=Merged
 stash2slack.global.settings.slack.merged.enabled.description=Send notifications for Merged PR events
 stash2slack.global.settings.slack.commented.enabled.label=Commented
 stash2slack.global.settings.slack.commented.enabled.description=Send notifications for Commented PR events
+stash2slack.global.settings.slack.needs.work.enabled.label=Needs Work
+stash2slack.global.settings.slack.needs.work.enabled.description=Send notifications for Needs Work PR events
 stash2slack.global.settings.slack.push.enabled.label=Enable slack notifications for push
 stash2slack.global.settings.slack.push.enabled.description=If enabled, users will receive slack notifications about push activities
 stash2slack.global.settings.slack.notification.level.label=Notification level
@@ -51,6 +53,8 @@ stash2slack.local.settings.slack.merged.enabled.label=Merged
 stash2slack.local.settings.slack.merged.enabled.description=Send notifications for Merged PR events
 stash2slack.local.settings.slack.commented.enabled.label=Commented
 stash2slack.local.settings.slack.commented.enabled.description=Send notifications for Commented PR events
+stash2slack.local.settings.slack.needs.work.enabled.label=Needs Work
+stash2slack.local.settings.slack.needs.work.enabled.description=Send notifications for Needs Work PR events
 stash2slack.local.settings.slack.push.enabled.label=Enable slack notifications for push
 stash2slack.local.settings.slack.push.enabled.description=If enabled, users will receive slack notifications about push activities
 stash2slack.local.settings.notification.level.label=Push notification level
